Melhorias nop build e regras